# ColorMC.Android

./: .gitignore  .gitmodules  README.md
src/: .gitignore  ColorMC.Android.sln  MainActivity.cs
src/ColorMC.Android.Lib/: ColorMC.Android.Lib.csproj  JavaExit.cs  JavaLog.cs  NativeHook.cs
src/ColorMC.Android.Native/: ColorMC.Android.Native.vcxproj  ColorMC.Android.Native.vcxproj.filters  abi_info.c  abi_info.h  java_exit.c  java_exit.h  java_log.c  java_log.h  java_render.c  java_run.c  log.h  render.c  render.h
src/ColorMC.Android.Render/: AndroidHelper.cs  ColorMC.Android.GLRender.csproj  ColorMC.Android.Render.csproj  EGLBase.cs  Env.cs  Environ.cs  GLBase.cs  GLSurface.cs  GameLauncher.cs  GameRender.cs  Keycode.cs  LwjglKeycode.cs  NativeWindow.cs  OSMBase.cs  PBO.cs  RenderLog.cs  RenderTest.cs  TapDetector.cs  TestSurface.cs  Using.cs
src/ColorMCNative/colormc_native/src/main/cpp/: CMakeLists.txt  hook.h  nsbypass.c  test.c  test.cpp  vkneed.c
src/ColorMCNative/colormc_native/src/main/cpp/display/: display.c  shared.cpp  shared_texture.cpp  shared_texture.h
src/ColorMCNative/colormc_native/src/main/cpp/run/: bmp.c  context_list.c  context_list.h  events.c  events.h  game_sock.c  game_sock.h  lwjgl_use.c  render_sock.c  render_sock.h  render_test.c  render_test.h  run.c  run.h  run_shared_texture.c  run_shared_texture.h
src/ColorMCNative/colormc_native/src/main/cpp/run/GL/: glext.h  osmesa.h
src/ColorMCNative/colormc_native/src/main/cpp/run/dl_loader/: ah_loader.c  ah_loader.h  egl_loader.c  egl_loader.h  gl_loader.c  gl_loader.h
(+131 files in other folders)
